--- a/notebooks/note_multiclassification.ipynb
+++ b/notebooks/note_multiclassification.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,12 @@
     "import numpy as np \n",
     "import scipy as sp \n",
     "import pandas as pd\n",
-    "from  statsmodels.tsa.api import acf\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +41,8 @@
     "\n",
     "import midiio\n",
     "import frequency_analysis as frqa\n",
-    "from midi.midi_representation import *"
+    "from midi.midi_representation import *\n",
+    "from musicnet_extractor import *"
    ]
   },
   {
@@ -55,445 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "MIDI_START = 20\n",
-    "MIDI_END = 127\n",
-    "\n",
-    "FREQUENCY_COUNT = 257"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let us define our input and output data\n",
-    "input_columns = [\"f\" + str(i) for i in range(0, FREQUENCY_COUNT)]\n",
-    "label_columns = [i for i in range(MIDI_START, MIDI_END+1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_data(wav_path, csv_path):\n",
-    "    # Open the midifile to see what is inside. Also open the accopmanying labels.\n",
-    "    data, sample_rate = midiio.read_file(wav_path)\n",
-    "\n",
-    "    music_dataframe = pd.read_csv(csv_path)\n",
-    "\n",
-    "    music_dataframe\n",
-    "    WINDOW_SAMPLES = sample_rate * 0.05\n",
-    "\n",
-    "    # For the model, construct the training data as follows:\n",
-    "    music_dataframe_copy = music_dataframe.copy()\n",
-    "    training_data = pd.DataFrame(columns = ['start_time'] + label_columns + input_columns)\n",
-    "\n",
-    "    # Create a linear series where points are WINDOW_SAMPLES apart from each other. \n",
-    "    serialized_data = []\n",
-    "    xs = np.linspace(0, len(data), int (len(data) / WINDOW_SAMPLES), endpoint=False)\n",
-    "\n",
-    "    # Iterate over the music dataframe. Construct a one hot encoded vector for this particular time based on the note value\n",
-    "    # At the given time.\n",
-    "    i = 0\n",
-    "\n",
-    "    for x in xs:\n",
-    "        notes_on = music_dataframe_copy.query(\"start_time <= \" + str(int(x))).query(\"end_time >= \" + str(int(x)))\n",
-    "        music_dataframe_copy.drop(notes_on.index, axis='index', inplace=True)\n",
-    "        \n",
-    "        note_vec = [0 for i in range(MIDI_START, MIDI_END + 1)]\n",
-    "        if len(notes_on) != 0:\n",
-    "            for n in notes_on['note']:\n",
-    "                note_vec[n - MIDI_START] = 1\n",
-    "        \n",
-    "        \n",
-    "        f, power = frqa.get_frequencies(data[int(x) : int(x + WINDOW_SAMPLES)], sample_rate)\n",
-    "        training_data.loc[len(training_data.index)] = [x, *note_vec, *np.abs(power)]\n",
-    "\n",
-    "    return training_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\JOAQUIN DELA ROSA\\AppData\\Local\\Temp\\ipykernel_21580\\2350247582.py:1: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  training_data = get_data(\"../data/musicnet/1727.wav\", \"../data/musicnet/1727.csv\").append(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>...</th>\n",
-       "      <th>f247</th>\n",
-       "      <th>f248</th>\n",
-       "      <th>f249</th>\n",
-       "      <th>f250</th>\n",
-       "      <th>f251</th>\n",
-       "      <th>f252</th>\n",
-       "      <th>f253</th>\n",
-       "      <th>f254</th>\n",
-       "      <th>f255</th>\n",
-       "      <th>f256</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.168419</td>\n",
-       "      <td>0.168394</td>\n",
-       "      <td>0.168313</td>\n",
-       "      <td>0.168233</td>\n",
-       "      <td>0.168235</td>\n",
-       "      <td>0.168314</td>\n",
-       "      <td>0.168391</td>\n",
-       "      <td>0.168419</td>\n",
-       "      <td>0.168409</td>\n",
-       "      <td>0.168509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.205047e+03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.180148</td>\n",
-       "      <td>0.180069</td>\n",
-       "      <td>0.180000</td>\n",
-       "      <td>0.180026</td>\n",
-       "      <td>0.180155</td>\n",
-       "      <td>0.180220</td>\n",
-       "      <td>0.180145</td>\n",
-       "      <td>0.180121</td>\n",
-       "      <td>0.180248</td>\n",
-       "      <td>0.180493</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.410095e+03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.170408</td>\n",
-       "      <td>0.170416</td>\n",
-       "      <td>0.170419</td>\n",
-       "      <td>0.170419</td>\n",
-       "      <td>0.170420</td>\n",
-       "      <td>0.170422</td>\n",
-       "      <td>0.170422</td>\n",
-       "      <td>0.170422</td>\n",
-       "      <td>0.170426</td>\n",
-       "      <td>0.170440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.615142e+03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.155265</td>\n",
-       "      <td>0.155265</td>\n",
-       "      <td>0.155266</td>\n",
-       "      <td>0.155266</td>\n",
-       "      <td>0.155266</td>\n",
-       "      <td>0.155269</td>\n",
-       "      <td>0.155271</td>\n",
-       "      <td>0.155273</td>\n",
-       "      <td>0.155273</td>\n",
-       "      <td>0.155277</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8.820189e+03</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.146619</td>\n",
-       "      <td>0.146619</td>\n",
-       "      <td>0.146618</td>\n",
-       "      <td>0.146618</td>\n",
-       "      <td>0.146617</td>\n",
-       "      <td>0.146618</td>\n",
-       "      <td>0.146618</td>\n",
-       "      <td>0.146617</td>\n",
-       "      <td>0.146617</td>\n",
-       "      <td>0.146619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3888</th>\n",
-       "      <td>8.573678e+06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3889</th>\n",
-       "      <td>8.575883e+06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3890</th>\n",
-       "      <td>8.578089e+06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3891</th>\n",
-       "      <td>8.580294e+06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3892</th>\n",
-       "      <td>8.582499e+06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12834 rows × 366 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        start_time   20   21   22   23   24   25   26   27   28  ...  \\\n",
-       "0     0.000000e+00  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "1     2.205047e+03  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "2     4.410095e+03  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "3     6.615142e+03  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "4     8.820189e+03  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "...            ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "3888  8.573678e+06  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "3889  8.575883e+06  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "3890  8.578089e+06  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "3891  8.580294e+06  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "3892  8.582499e+06  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...   \n",
-       "\n",
-       "          f247      f248      f249      f250      f251      f252      f253  \\\n",
-       "0     0.168419  0.168394  0.168313  0.168233  0.168235  0.168314  0.168391   \n",
-       "1     0.180148  0.180069  0.180000  0.180026  0.180155  0.180220  0.180145   \n",
-       "2     0.170408  0.170416  0.170419  0.170419  0.170420  0.170422  0.170422   \n",
-       "3     0.155265  0.155265  0.155266  0.155266  0.155266  0.155269  0.155271   \n",
-       "4     0.146619  0.146619  0.146618  0.146618  0.146617  0.146618  0.146618   \n",
-       "...        ...       ...       ...       ...       ...       ...       ...   \n",
-       "3888  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3889  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3890  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3891  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3892  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "\n",
-       "          f254      f255      f256  \n",
-       "0     0.168419  0.168409  0.168509  \n",
-       "1     0.180121  0.180248  0.180493  \n",
-       "2     0.170422  0.170426  0.170440  \n",
-       "3     0.155273  0.155273  0.155277  \n",
-       "4     0.146617  0.146617  0.146619  \n",
-       "...        ...       ...       ...  \n",
-       "3888  0.000000  0.000000  0.000000  \n",
-       "3889  0.000000  0.000000  0.000000  \n",
-       "3890  0.000000  0.000000  0.000000  \n",
-       "3891  0.000000  0.000000  0.000000  \n",
-       "3892  0.000000  0.000000  0.000000  \n",
-       "\n",
-       "[12834 rows x 366 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "training_data = get_data(\"../data/musicnet/1727.wav\", \"../data/musicnet/1727.csv\").append(\n",
     "                get_data(\"../data/musicnet/1759.wav\", \"../data/musicnet/1759.csv\"))\n",
