fix: cqt allows for array of arrays as input

--- a/notebooks/audio-eda.ipynb
+++ b/notebooks/audio-eda.ipynb
@@ -83,26 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "cqt = CQT()\n",
-    "cqt_results = cqt(data)"
+    "cqt_results = cqt([data])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x21fd3101100>"
+       "<matplotlib.collections.QuadMesh at 0x1ba4d3e2700>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "specshow(librosa.amplitude_to_db(cqt_results, ref=np.max))"
+    "specshow(librosa.amplitude_to_db(cqt_results[0], ref=np.max))"
    ]
   },
   {
