add: harmonic stacking proper

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "array([0., 0., 0., ..., 0., 0., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,74 +78,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 9661440)"
+       "(9661440,)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_data = np.array([data, data])\n",
+    "input_data = np.array(data)\n",
     "input_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of layers.cqt failed: Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 257, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 480, in superreload\n",
-      "    update_generic(old_obj, new_obj)\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 377, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 329, in update_class\n",
-      "    if update_generic(old_obj, new_obj):\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 377, in update_generic\n",
-      "    update(a, b)\n",
-      "  File \"c:\\Users\\JOAQUIN DELA ROSA\\anaconda3\\envs\\tfgpu\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 289, in update_function\n",
-      "    setattr(old, name, getattr(new, name))\n",
-      "ValueError: call() requires a code object with 1 free vars, not 0\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test if model works\n",
-    "model = Transcriber(input_data.shape, [i for i in range(1, 8)])"
+    "# Test if model works.\n",
+    "tf.config.run_functions_eagerly(True)\n",
+    "model = Transcriber([i for i in range(1, 8)])\n",
+    "model.compile(optimizer=\"adam\", loss=losses.binary_crossentropy, run_eagerly=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 252, 18871, 7), dtype=float32, numpy=\n",
+       "array([[[[4.11131157e-04, 5.35047233e-01, 5.64900219e-01, ...,\n",
+       "          5.59645593e-01, 2.46259645e-01, 2.29309514e-01],\n",
+       "         [7.98508117e-04, 5.22839367e-01, 5.76051831e-01, ...,\n",
+       "          5.67786992e-01, 2.50845045e-01, 2.28353575e-01],\n",
+       "         [7.80851697e-04, 5.08685112e-01, 5.86913109e-01, ...,\n",
+       "          5.73150218e-01, 2.53588855e-01, 2.26790309e-01],\n",
+       "         ...,\n",
+       "         [4.23298798e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [4.11527844e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [4.01343823e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]],\n",
+       "\n",
+       "        [[1.77128983e-04, 4.62389171e-01, 4.65670973e-01, ...,\n",
+       "          4.69662935e-01, 3.02293777e-01, 4.33449708e-02],\n",
+       "         [2.79542379e-04, 4.49169576e-01, 4.79034960e-01, ...,\n",
+       "          4.72433627e-01, 3.10062647e-01, 4.01590466e-02],\n",
+       "         [2.72797508e-04, 4.35170650e-01, 4.92078543e-01, ...,\n",
+       "          4.74353611e-01, 3.17713439e-01, 3.82191166e-02],\n",
+       "         ...,\n",
+       "         [3.65213759e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [3.56561372e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [3.47780701e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]],\n",
+       "\n",
+       "        [[1.62073396e-04, 3.02303165e-01, 3.64326775e-01, ...,\n",
+       "          3.48437130e-01, 3.36010724e-01, 1.72254503e-01],\n",
+       "         [2.21031412e-04, 2.94125676e-01, 3.69549930e-01, ...,\n",
+       "          3.39954734e-01, 3.37075263e-01, 1.67689741e-01],\n",
+       "         [4.54859488e-04, 2.86471695e-01, 3.74284357e-01, ...,\n",
+       "          3.32362235e-01, 3.36944759e-01, 1.63173020e-01],\n",
+       "         ...,\n",
+       "         [4.69874976e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [4.53968323e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [4.36870187e-06, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0.00000000e+00, 2.54311394e-02, 2.68858615e-02, ...,\n",
+       "          4.33977582e-02, 4.68612313e-02, 1.89511314e-01],\n",
+       "         [0.00000000e+00, 1.86617617e-02, 2.95055266e-02, ...,\n",
+       "          8.01776163e-03, 4.87068035e-02, 1.14821434e-01],\n",
+       "         [0.00000000e+00, 3.82020907e-03, 4.36005369e-03, ...,\n",
+       "          3.73933688e-02, 2.40579862e-02, 3.43512893e-01],\n",
+       "         ...,\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]],\n",
+       "\n",
+       "        [[0.00000000e+00, 4.17619012e-02, 1.96178667e-02, ...,\n",
+       "          4.33244668e-02, 2.85235625e-02, 8.03265944e-02],\n",
+       "         [0.00000000e+00, 3.54587808e-02, 3.37526612e-02, ...,\n",
+       "          1.09292194e-02, 3.20413336e-02, 8.05641338e-02],\n",
+       "         [0.00000000e+00, 1.34535758e-02, 3.35678607e-02, ...,\n",
+       "          5.19086123e-02, 2.14127209e-02, 1.32754549e-01],\n",
+       "         ...,\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]],\n",
+       "\n",
+       "        [[0.00000000e+00, 3.09009030e-02, 3.48721147e-02, ...,\n",
+       "          4.30605523e-02, 3.55451964e-02, 7.68337399e-02],\n",
+       "         [0.00000000e+00, 3.23327966e-02, 2.53236126e-02, ...,\n",
+       "          2.46295966e-02, 3.71041708e-02, 8.93595591e-02],\n",
+       "         [0.00000000e+00, 1.58679839e-02, 3.24723013e-02, ...,\n",
+       "          4.08898368e-02, 3.39201391e-02, 1.11469058e-02],\n",
+       "         ...,\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "         [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, ...,\n",
+       "          0.00000000e+00, 0.00000000e+00, 0.00000000e+00]]]],\n",
+       "      dtype=float32)>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(input_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_4\"\n",
+      "Model: \"transcriber\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_21 (InputLayer)        [(1, 2, 9661440)]         0         \n",
+      "cqt (CQT)                    multiple                  0         \n",
+      "_________________________________________________________________\n",
+      "harmonic_stacking (HarmonicS multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                multiple                  18872     \n",
       "=================================================================\n",
-      "Total params: 0\n",
-      "Trainable params: 0\n",
+      "Total params: 18,872\n",
+      "Trainable params: 18,872\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -157,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
